force-app/main/default/objects/Customer_Specific_Pricing__c/Customer_Specific_Pricing__c.object-meta.xml
<CustomObject>
    <description>Customer Specific Pricing Module from BUSINESSVISION</description>
    <label>DN-CA-Customer Specific Pricing</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CSP Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Specific Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>