force-app/main/default/objects/Customer_Specific_Pricing__c/fields/BVSPECPRICEADDRID__c.field-meta.xml
<CustomField>
    <fullName>BVSPECPRICEADDRID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>