force-app/main/default/objects/Customer_Specific_Pricing__c/fields/BVSPECPRICEADDRTYPE__c.field-meta.xml
<CustomField>
    <fullName>BVSPECPRICEADDRTYPE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>