force-app/main/default/objects/Customer_Specific_Pricing__c/fields/BVSPECPRICECODE__c.field-meta.xml
<CustomField>
    <fullName>BVSPECPRICECODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>