force-app/main/default/objects/Customer_Specific_Pricing__c/fields/BVSPECPRICEPARTNO__c.field-meta.xml
<CustomField>
    <fullName>BVSPECPRICEPARTNO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Part No.</label>
    <length>34</length>
    <type>Text</type>
</CustomField>