force-app/main/default/objects/Customer_Specific_Pricing__c/fields/BVSPECPRICEWHSE__c.field-meta.xml
<CustomField>
    <fullName>BVSPECPRICEWHSE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Warehouse</label>
    <length>6</length>
    <type>Text</type>
</CustomField>