force-app/main/default/objects/Customer_Specific_Pricing__c/fields/External_Customer_Specific_Pricing_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Customer_Specific_Pricing_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Customer Specific Pricing ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>