force-app/main/default/objects/Customer_Specific_Pricing__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <description>(( Selling_Price__c  -  Cost__c ) / Selling_Price__c  )</description>
    <formula>(( Selling_Price__c  -  Cost__c ) / Selling_Price__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>