force-app/main/default/objects/Customer_Specific_Pricing__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>