force-app/main/default/objects/Customer_Specific_Pricing__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product ID</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>R00N70000002KGSdEAO</relationshipName>
    <type>Lookup</type>
</CustomField>