force-app/main/default/objects/Customer_Specific_Pricing__c/fields/Sync_ID__c.field-meta.xml
<CustomField>
    <fullName>Sync_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Sync ID</label>
    <length>91</length>
    <type>Text</type>
</CustomField>