force-app/main/default/objects/Customer_Specific_Pricing__c/fields/Sync_ID_Org__c.field-meta.xml
<CustomField>
    <fullName>Sync_ID_Org__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sync ID Org</label>
    <length>2</length>
    <type>Text</type>
</CustomField>