force-app/main/default/objects/Customer_Specific_Pricing__c/fields/Unit_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Measure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit of Measure</label>
    <length>10</length>
    <type>Text</type>
</CustomField>