force-app/main/default/objects/Customer_Specific_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>List_Price__c</columns>
    <columns>Cost__c</columns>
    <columns>Selling_Price__c</columns>
    <columns>Gross_Margin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>