force-app/main/default/objects/Customer_Specific_Pricing__c/listViews/All_d_2.listView-meta.xml
<ListView>
    <fullName>All_d_2</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>